--- a/blog/post/templates/post/nueva_publicacion.html
+++ b/blog/post/templates/post/nueva_publicacion.html
@@ -1,10 +1,38 @@
 {% extends 'post/base.html' %}
 {% load static %}
 
-{% block extra_head %}
-<title>Nueva publicación</title>
-{% endblock extra_head %}
+{% block extra_head %} 
+<title>Nueva Publicación</title>
+<link rel="stylesheet" href="{% static 'post/css/formulario_blog.css' %}">
+{% endblock extra_head%}
 
 {% block content %}
-<h1>Nueva publicación</h1>
-{% endblock content %}
+<div class="form-container">
+    <h2>Crear Nueva Publicación</h2>
+    <form method="POST">
+        {% csrf_token %}
+        
+        <div class="form-group">
+            <label for="{{ form.title.id_for_label }}">{{ form.title.label }}:</label>
+            {{ form.title }}
+        </div>
+
+        <div class="form-group">
+            <label for="{{ form.content.id_for_label }}">{{ form.content.label }}:</label>
+            {{ form.content }}
+        </div>
+
+        <div class="form-group">
+            <label for="{{ form.category.id_for_label }}">{{ form.category.label }}:</label>
+            {{ form.category }}
+        </div>
+
+        <div class="form-group checkbox-group">
+            {{ form.published }}
+            <label for="{{ form.published.id_for_label }}">{{ form.published.label }}</label>
+        </div>
+
+        <button type="submit">Guardar Post</button>
+    </form>
+</div>
+{% endblock content%}
